# vueclient/src/api/index.ts
@@ -15,6 +15,8 @@ export type { RefreshRequest } from './models/RefreshRequest';
 export type { RegisterRequest } from './models/RegisterRequest';
 export type { Room } from './models/Room';
 export type { RoomJoinResponse } from './models/RoomJoinResponse';
+export type { RoomParticipant } from './models/RoomParticipant';
+export type { RoomParticipantsResponse } from './models/RoomParticipantsResponse';
 export { SignalingMessage } from './models/SignalingMessage';
 export type { UserProfile } from './models/UserProfile';
 
